# color

./: LICENSE  README.md  color.cabal
src/Data/: Color.hs
src/Data/Color/: StandardIlluminants.hs  Types.hs
src/Data/Color/Models/: LChroma.hs  RGB.hs  XYZ.hs
src/Data/Color/Spaces/: LAB.hs  LUV.hs  RGB.hs
src/Data/Color/Types/: Color.hs  ColorSpace.hs  ParametricCurve.hs
tests/: Test.hs
tests/Helpers/: LABColors.hs  LUVColors.hs  RGBColors.hs  Utils.hs  XYZColors.hs
tests/Properties/: LAB.hs  LChroma.hs  LUV.hs  RGB.hs
tests/Unit/: LAB.hs  LUV.hs  RGB.hs
