name:                color
version:             0.1.0
synopsis:            Convert colors between color spaces
homepage:            https://github.com/endash/color
license:             MIT
license-file:        LICENSE
author:              Christopher Swasey
maintainer:          christopher.swasey@gmail.com
copyright:           (c) 2019 Christopher Swasey
category:            Graphics
build-type:          Simple
stability:           stable
bug-reports:         https://github.com/endash/color/issues
package-url:         http://hackage.haskell.org/package/color
tested-with:         GHC >= 8.6.3
cabal-version:       >= 1.18.1

description:
  @hscolor@ models colors and color spaces, and converts between them.

extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://github.com/endash/color

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Data.Color
    Data.Color.Types
    Data.Color.Types.Color
    Data.Color.Types.ColorSpace
    Data.Color.Types.ParametricCurve
    Data.Color.Spaces.LAB
    Data.Color.Spaces.LUV
    Data.Color.Spaces.RGB
    Data.Color.Models.XYZ
    Data.Color.Models.RGB
    Data.Color.Models.LChroma
    Data.Color.StandardIlluminants

  ghc-options: -Wall -fno-warn-orphans

  build-depends:
                base,
                matrix

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Test.hs
  default-language: Haskell2010
  other-modules:
                Unit.RGB
                Unit.LAB
                Unit.LUV
                Properties.RGB
                Properties.LAB
                Properties.LUV
                Properties.LChroma
                Helpers.Utils
                Helpers.RGBColors
                Helpers.LABColors
                Helpers.LUVColors
                Helpers.XYZColors


  ghc-options:
    -Wall -threaded -rtsopts

  build-depends:
                color,
                base,
                HUnit,
                QuickCheck,
                test-framework,
                test-framework-quickcheck2,
                test-framework-hunit
